# pyterrier_t5

./: .gitignore  README.md  pyproject.toml  pyterrier_monoT5_direct_rerank.ipynb  pyterrier_t5_trec-covid.ipynb  pyterrier_t5_vaswani.ipynb  requirements.txt  setup.py
.github/workflows/: push.yml  style.yml  test.yml
pyterrier_t5/: __init__.py
tests/: test_regression.py
training/monot5/: README.md  t5-train-bm25negs.py  t5train.py
