[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier-t5"
description = "PyTerrier components for T5 ranking"
requires-python = ">=3.9"
authors = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
maintainers = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Indexing",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "pyterrier_t5.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
Repository = "https://github.com/terrierteam/pyterrier_t5"
"Bug Tracker" = "https://github.com/terrierteam/pyterrier_t5/issues"
